--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </header>
     <main>
         <form id="blogForm">
+            <img class="profile"  src="./images/ChessSet.jpg" alt="image">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
             <label for="title">Blog Title:</label>
